--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:cide="http://schemas.android.com/apk/res-auto"
+    xmlns:cide="http://schemas.android.com/apk/res/mx.com.factico.cide"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:divider="@drawable/divider_horizontal_white"
@@ -10,40 +10,43 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="2"
+        android:layout_height="0dp"
+        android:layout_weight="5"
         android:background="@drawable/drawable_bgr_gradient_dark" >
 
         <mx.com.factico.cide.views.CustomTextView
+            android:id="@+id/main_desciption"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/toolbar"
-            android:drawablePadding="20dp"
-            android:drawableTop="@drawable/ic_launcher"
+            android:layout_below="@+id/main_logo"
             android:gravity="center"
             android:padding="20dp"
-            android:shadowColor="@color/primary_color"
-            android:shadowDx="3"
-            android:shadowDy="3"
-            android:shadowRadius="5"
             android:text="@string/lorem_ipsum_que_es_justicia"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textColor="@color/white"
             android:textSize="15sp"
             cide:typefaceRoboto="regular" />
 
+        <ImageView
+            android:id="@+id/main_logo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:contentDescription="@string/app_name"
+            android:padding="20dp"
+            android:src="@drawable/ic_splash" />
+
         <include
-            android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             layout="@layout/actionbar" />
     </RelativeLayout>
 
-    <mx.com.factico.cide.views.CustomButton
+    <mx.com.factico.cide.views.CustomTextView
         android:id="@+id/main_btn_option1"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="4"
+        android:layout_weight="2"
         android:background="@drawable/selector_btn_dark"
         android:drawableEnd="@android:drawable/ic_media_next"
         android:drawableRight="@android:drawable/ic_media_next"
@@ -54,13 +57,14 @@
         android:paddingStart="@dimen/activity_horizontal_margin"
         android:text="@string/main_menu_option1"
         android:textColor="@color/white"
-        android:textSize="15sp" />
+        android:textSize="15sp"
+        cide:typefaceRoboto="regular" />
 
-    <Button
+    <mx.com.factico.cide.views.CustomTextView
         android:id="@+id/main_btn_option2"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="4"
+        android:layout_weight="2"
         android:background="@drawable/selector_btn_ligth"
         android:drawableEnd="@android:drawable/ic_media_next"
         android:drawableRight="@android:drawable/ic_media_next"
@@ -70,13 +74,14 @@
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:text="@string/main_menu_option2"
         android:textColor="@color/white"
-        android:textSize="15sp" />
+        android:textSize="15sp"
+        cide:typefaceRoboto="regular" />
 
-    <Button
+    <mx.com.factico.cide.views.CustomTextView
         android:id="@+id/main_btn_option3"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_weight="2"
         android:background="@drawable/selector_btn_ligth"
         android:drawableEnd="@android:drawable/ic_media_next"
         android:drawableRight="@android:drawable/ic_media_next"
@@ -91,6 +96,7 @@
         android:text="@string/main_menu_option3"
         android:textColor="@color/white"
         android:textSize="15sp"
-        android:visibility="gone" />
+        android:visibility="gone"
+        cide:typefaceRoboto="regular" />
 
 </LinearLayout>
