--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -16,5 +16,9 @@
     <declare-styleable name="CustomEditText">
         <attr name="typefaceRoboto" />
     </declare-styleable>
+    
+    <declare-styleable name="CustomButton">
+        <attr name="typefaceRoboto" />
+    </declare-styleable>
 
 </resources>
