--- a/res/drawable/drawable_bgr_gradient_middle.xml
+++ b/res/drawable/drawable_bgr_gradient_middle.xml
@@ -8,8 +8,8 @@
 
     <gradient
         android:angle="90"
-        android:endColor="@color/green_dark_color"
-        android:startColor="@color/green_middle_color" />
+        android:endColor="@color/green_middle_color"
+        android:startColor="@color/green_ligth_color" />
 
     <corners
         android:bottomLeftRadius="0dp"
