--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -3,38 +3,48 @@
     xmlns:cide="http://schemas.android.com/apk/res/mx.com.factico.cide"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/drawable_bgr_gradient_dark"
     android:divider="@drawable/divider_horizontal_white"
     android:orientation="vertical"
-    android:showDividers="middle"
-    android:weightSum="10" >
+    android:showDividers="middle" >
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="5"
-        android:background="@drawable/drawable_bgr_gradient_dark" >
+        android:layout_weight="1"
+        android:background="@drawable/drawable_bgr_gradient_dark"
+        android:orientation="horizontal"
+        android:weightSum="5" >
 
-        <mx.com.factico.cide.views.CustomTextView
-            android:id="@+id/main_desciption"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/main_logo"
-            android:gravity="center"
-            android:padding="20dp"
-            android:text="@string/lorem_ipsum_que_es_justicia"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:textColor="@color/white"
-            android:textSize="15sp"
-            cide:typefaceRoboto="regular" />
+            android:layout_height="match_parent"
+            android:background="@drawable/drawable_bgr_gradient_dark"
+            android:orientation="horizontal"
+            android:weightSum="6" >
 
-        <ImageView
-            android:id="@+id/main_logo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:contentDescription="@string/app_name"
-            android:padding="20dp"
-            android:src="@drawable/ic_splash" />
+            <ImageView
+                android:id="@+id/main_logo"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2"
+                android:contentDescription="@string/app_name"
+                android:padding="20dp"
+                android:src="@drawable/ic_splash" />
+
+            <mx.com.factico.cide.views.CustomTextView
+                android:id="@+id/main_desciption"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="4"
+                android:gravity="center_vertical"
+                android:padding="20dp"
+                android:text="@string/lorem_ipsum_que_es_justicia"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textColor="@color/white"
+                android:textSize="15sp"
+                cide:typefaceRoboto="regular" />
+        </LinearLayout>
 
         <include
             android:layout_width="match_parent"
@@ -46,10 +56,10 @@
         android:id="@+id/main_btn_option1"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="2"
+        android:layout_weight="1"
         android:background="@drawable/selector_btn_dark"
-        android:drawableEnd="@android:drawable/ic_media_next"
-        android:drawableRight="@android:drawable/ic_media_next"
+        android:drawableEnd="@drawable/ic_menu_arrow"
+        android:drawableRight="@drawable/ic_menu_arrow"
         android:gravity="start|center_vertical"
         android:paddingEnd="@dimen/activity_horizontal_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -64,10 +74,10 @@
         android:id="@+id/main_btn_option2"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="2"
+        android:layout_weight="1"
         android:background="@drawable/selector_btn_ligth"
-        android:drawableEnd="@android:drawable/ic_media_next"
-        android:drawableRight="@android:drawable/ic_media_next"
+        android:drawableEnd="@drawable/ic_menu_arrow"
+        android:drawableRight="@drawable/ic_menu_arrow"
         android:gravity="start|center_vertical"
         android:paddingEnd="@dimen/activity_horizontal_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -81,22 +91,17 @@
         android:id="@+id/main_btn_option3"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="2"
+        android:layout_weight="1"
         android:background="@drawable/selector_btn_ligth"
-        android:drawableEnd="@android:drawable/ic_media_next"
-        android:drawableRight="@android:drawable/ic_media_next"
+        android:drawableEnd="@drawable/ic_menu_arrow"
+        android:drawableRight="@drawable/ic_menu_arrow"
         android:gravity="start|center_vertical"
         android:paddingEnd="@dimen/activity_horizontal_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
-        android:shadowColor="@color/primary_color"
-        android:shadowDx="3"
-        android:shadowDy="3"
-        android:shadowRadius="5"
         android:text="@string/main_menu_option3"
         android:textColor="@color/white"
         android:textSize="15sp"
-        android:visibility="gone"
         cide:typefaceRoboto="regular" />
 
 </LinearLayout>
