--- a/res/layout/activity_testimonios_menu.xml
+++ b/res/layout/activity_testimonios_menu.xml
@@ -3,34 +3,19 @@
     xmlns:cide="http://schemas.android.com/apk/res/mx.com.factico.cide"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/btn_ligth_green_color"
     android:orientation="vertical"
-    android:weightSum="10"
-    android:background="@color/btn_ligth_green_color" >
+    android:weightSum="10" >
 
-    <RelativeLayout
+    <include
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="3"
-        android:background="@drawable/drawable_bgr_gradient_dark"
-        android:orientation="vertical" >
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:contentDescription="@string/testimonio_name"
-            android:padding="20dp"
-            android:src="@drawable/ic_splash" />
-        
-        <include
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            layout="@layout/actionbar" />
-    </RelativeLayout>
+        android:layout_height="wrap_content"
+        layout="@layout/actionbar" />
 
     <TableLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="6"
+        android:layout_weight="8"
         android:background="@color/btn_ligth_green_color"
         android:weightSum="2" >
 
@@ -39,62 +24,111 @@
             android:layout_height="0dp"
             android:layout_weight="1" >
 
-            <mx.com.factico.cide.views.CustomTextView
+            <LinearLayout
                 android:id="@+id/testimonios_menu_btn_justice1"
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
                 android:layout_weight="1"
                 android:background="@drawable/selector_btn_squared"
-                android:drawablePadding="20dp"
-                android:drawableTop="@drawable/ic_launcher"
-                android:gravity="center_horizontal"
-                android:minLines="3"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_vertical_margin"
-                android:text="@string/justice_1"
-                android:textColor="@color/btn_ligth_green_color"
-                android:textSize="15sp"
-                cide:typefaceRoboto="regular" />
+                android:orientation="vertical"
+                android:gravity="center_vertical"
+                android:weightSum="5" >
 
-            <mx.com.factico.cide.views.CustomTextView
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="80dp"
+                    android:layout_weight="2"
+                    android:contentDescription="@string/testimonio_name"
+                    android:padding="10dp"
+                    android:scaleType="centerInside"
+                    android:src="@drawable/ic_justicia_trabajo" />
+
+                <mx.com.factico.cide.views.CustomTextView
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="4"
+                    android:gravity="center_horizontal"
+                    android:minLines="4"
+                    android:paddingBottom="@dimen/activity_vertical_margin"
+                    android:paddingLeft="@dimen/activity_horizontal_margin"
+                    android:paddingRight="@dimen/activity_horizontal_margin"
+                    android:paddingTop="@dimen/activity_vertical_margin"
+                    android:text="@string/justice_1"
+                    android:textColor="@color/btn_ligth_green_color"
+                    android:textSize="12sp"
+                    cide:typefaceRoboto="regular" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:id="@+id/testimonios_menu_btn_justice2"
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
                 android:layout_weight="1"
                 android:background="@drawable/selector_btn_squared"
-                android:drawablePadding="20dp"
-                android:drawableTop="@drawable/ic_launcher"
-                android:gravity="center_horizontal"
-                android:minLines="3"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_vertical_margin"
-                android:text="@string/justice_2"
-                android:textColor="@color/btn_ligth_green_color"
-                android:textSize="15sp"
-                cide:typefaceRoboto="regular" />
+                android:orientation="vertical"
+                android:weightSum="5" >
 
-            <mx.com.factico.cide.views.CustomTextView
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="80dp"
+                    android:layout_weight="2"
+                    android:contentDescription="@string/testimonio_name"
+                    android:padding="10dp"
+                    android:scaleType="centerInside"
+                    android:src="@drawable/ic_justicia_familiar" />
+
+                <mx.com.factico.cide.views.CustomTextView
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="3"
+                    android:gravity="center_horizontal"
+                    android:minLines="4"
+                    android:paddingBottom="@dimen/activity_vertical_margin"
+                    android:paddingLeft="@dimen/activity_horizontal_margin"
+                    android:paddingRight="@dimen/activity_horizontal_margin"
+                    android:paddingTop="@dimen/activity_vertical_margin"
+                    android:text="@string/justice_2"
+                    android:textColor="@color/btn_ligth_green_color"
+                    android:textSize="12sp"
+                    cide:typefaceRoboto="regular" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:id="@+id/testimonios_menu_btn_justice3"
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
                 android:layout_weight="1"
                 android:background="@drawable/selector_btn_squared"
-                android:drawablePadding="20dp"
-                android:drawableTop="@drawable/ic_launcher"
-                android:gravity="center_horizontal"
-                android:minLines="3"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_vertical_margin"
-                android:text="@string/justice_3"
-                android:textColor="@color/btn_ligth_green_color"
-                android:textSize="15sp"
-                cide:typefaceRoboto="regular" />
+                android:orientation="vertical"
+                android:weightSum="5" >
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="80dp"
+                    android:layout_weight="2"
+                    android:contentDescription="@string/testimonio_name"
+                    android:padding="10dp"
+                    android:scaleType="centerInside"
+                    android:src="@drawable/ic_justicia_vecinal" />
+
+                <mx.com.factico.cide.views.CustomTextView
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="3"
+                    android:gravity="center_horizontal"
+                    android:minLines="4"
+                    android:paddingBottom="@dimen/activity_vertical_margin"
+                    android:paddingLeft="@dimen/activity_horizontal_margin"
+                    android:paddingRight="@dimen/activity_horizontal_margin"
+                    android:paddingTop="@dimen/activity_vertical_margin"
+                    android:text="@string/justice_3"
+                    android:textColor="@color/btn_ligth_green_color"
+                    android:textSize="12sp"
+                    cide:typefaceRoboto="regular" />
+            </LinearLayout>
         </TableRow>
 
         <TableRow
@@ -102,47 +136,80 @@
             android:layout_height="0dp"
             android:layout_weight="1" >
 
-            <mx.com.factico.cide.views.CustomTextView
+            <LinearLayout
                 android:id="@+id/testimonios_menu_btn_justice4"
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
                 android:layout_weight="1"
                 android:background="@drawable/selector_btn_squared"
-                android:drawablePadding="20dp"
-                android:drawableTop="@drawable/ic_launcher"
-                android:gravity="center_horizontal"
-                android:minLines="3"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_vertical_margin"
-                android:text="@string/justice_4"
-                android:textColor="@color/btn_ligth_green_color"
-                android:textSize="15sp"
-                cide:typefaceRoboto="regular" />
+                android:orientation="vertical"
+                android:weightSum="5" >
 
-            <mx.com.factico.cide.views.CustomTextView
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="80dp"
+                    android:layout_weight="2"
+                    android:contentDescription="@string/testimonio_name"
+                    android:padding="10dp"
+                    android:scaleType="centerInside"
+                    android:src="@drawable/ic_justicia_funcionarios" />
+
+                <mx.com.factico.cide.views.CustomTextView
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="3"
+                    android:gravity="center_horizontal"
+                    android:minLines="4"
+                    android:paddingBottom="@dimen/activity_vertical_margin"
+                    android:paddingLeft="@dimen/activity_horizontal_margin"
+                    android:paddingRight="@dimen/activity_horizontal_margin"
+                    android:paddingTop="@dimen/activity_vertical_margin"
+                    android:text="@string/justice_4"
+                    android:textColor="@color/btn_ligth_green_color"
+                    android:textSize="12sp"
+                    cide:typefaceRoboto="regular" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:id="@+id/testimonios_menu_btn_justice5"
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
                 android:layout_weight="1"
                 android:background="@drawable/selector_btn_squared"
-                android:drawablePadding="20dp"
-                android:drawableTop="@drawable/ic_launcher"
-                android:gravity="center_horizontal"
-                android:minLines="3"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_vertical_margin"
-                android:text="@string/justice_5"
-                android:textColor="@color/btn_ligth_green_color"
-                android:textSize="15sp"
-                cide:typefaceRoboto="regular" />
+                android:orientation="vertical"
+                android:weightSum="6" >
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="80dp"
+                    android:layout_weight="2"
+                    android:contentDescription="@string/testimonio_name"
+                    android:padding="10dp"
+                    android:scaleType="centerInside"
+                    android:src="@drawable/ic_justicia_emprendedores" />
+
+                <mx.com.factico.cide.views.CustomTextView
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="4"
+                    android:gravity="center_horizontal"
+                    android:minLines="4"
+                    android:paddingBottom="@dimen/activity_vertical_margin"
+                    android:paddingLeft="@dimen/activity_horizontal_margin"
+                    android:paddingRight="@dimen/activity_horizontal_margin"
+                    android:paddingTop="@dimen/activity_vertical_margin"
+                    android:text="@string/justice_5"
+                    android:textColor="@color/btn_ligth_green_color"
+                    android:textSize="12sp"
+                    cide:typefaceRoboto="regular" />
+            </LinearLayout>
 
             <TextView
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
                 android:layout_weight="1"
                 android:paddingBottom="@dimen/activity_vertical_margin"
                 android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -155,16 +222,14 @@
         android:id="@+id/testimonios_btn_map"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:layout_marginLeft="30dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginRight="30dp"
         android:layout_marginEnd="30dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginStart="30dp"
+        android:layout_weight="1"
+        android:background="@drawable/selector_btn_squared_border"
         android:contentDescription="@string/testimonio_name"
         android:gravity="center"
-        android:background="@drawable/selector_btn_squared_border"
         android:text="@string/testimonios_btn_map"
         android:textColor="@color/white"
         android:textSize="15sp"
