--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -19,16 +19,23 @@
     <color name="black">#FF000000</color>
     
     <color name="title_color">#565656</color>
-    <color name="default_background_color">#F2F2F2</color>
     <color name="default_text_color">#666666</color>
+    
+    <color name="default_background_color">#F2F2F2</color>
     
     <color name="divider_color">#6CDA84</color>
     
     <color name="divider_white_color">#FFFFFF</color>
     
-    <color name="btn_dark_green_color">#FF4A8293</color>
-    <color name="btn_dark_green_color_alpha">#AA4A8293</color>
+    <color name="btn_dark_green_color">#FF3E8293</color>
+    <color name="btn_dark_green_color_alpha">#AA3E8293</color>
     <color name="btn_ligth_green_color">#FF58CA8F</color>
     <color name="btn_ligth_green_color_alpha">#AA58CA8F</color>
+    
+    <!-- Gradient colors -->
+    <color name="green_dark_color">#FF3E8293</color>
+    <color name="green_middle_color">#FF42CB90</color>
+    <color name="green_ligth_color">#FF48DA89</color>
+    <color name="green_ligth_ligth_color">#FF37E7CA</color>
 
 </resources>
