--- a/res/layout/activity_mexicomap.xml
+++ b/res/layout/activity_mexicomap.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/drawable_bgr_gradient_dark"
     android:orientation="vertical" >
 
     <include
