--- a/res/layout/activity_testimonios.xml
+++ b/res/layout/activity_testimonios.xml
@@ -3,8 +3,8 @@
     xmlns:cide="http://schemas.android.com/apk/res/mx.com.factico.cide"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/white" >
+    android:background="@drawable/drawable_bgr_gradient_dark"
+    android:orientation="vertical" >
 
     <mx.com.factico.cide.views.CustomScrollView
         android:id="@+id/testimonios_sv_scroll"
@@ -21,7 +21,6 @@
                 android:id="@+id/testimonios_iv_logo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/drawable_bgr_gradient_dark"
                 android:contentDescription="@string/testimonio_name"
                 android:paddingBottom="@dimen/activity_vertical_margin"
                 android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -38,6 +37,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/activity_vertical_margin"
+                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                     android:background="@color/white"
                     android:orientation="vertical"
                     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -49,8 +50,7 @@
                     <mx.com.factico.cide.views.CustomTextView
                         android:id="@+id/testimonios_tv_title"
                         android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_weight="1"
+                        android:layout_height="wrap_content"
                         android:gravity="center_vertical"
                         android:paddingTop="@dimen/activity_vertical_margin"
                         android:text=""
@@ -61,11 +61,9 @@
                     <mx.com.factico.cide.views.CustomTextView
                         android:id="@+id/testimonios_tv_desciption"
                         android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_weight="2"
-                        android:maxLines="4"
-                        android:paddingTop="@dimen/activity_vertical_margin"
+                        android:layout_height="wrap_content"
                         android:layout_marginBottom="50dp"
+                        android:paddingTop="@dimen/activity_vertical_margin"
                         android:text=""
                         android:textAppearance="?android:attr/textAppearanceSmall"
                         android:textColor="@color/default_text_color"
@@ -78,7 +76,7 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/testimonios_vg_description"
                     android:layout_centerHorizontal="true"
-                    android:layout_marginTop="-50dp"
+                    android:layout_marginTop="-35dp"
                     android:background="@drawable/selector_btn_ligth"
                     android:padding="10dp"
                     android:text="@string/testimonios_add_btn_new"
@@ -91,20 +89,16 @@
                 android:id="@+id/testimonios_vg_container"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="@dimen/activity_vertical_margin"
-                android:background="@color/white"
+                android:layout_marginBottom="@dimen/activity_vertical_margin"
+                android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                android:layout_marginRight="@dimen/activity_horizontal_margin"
                 android:divider="@drawable/divider_horizontal"
                 android:orientation="vertical"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_vertical_margin"
                 android:showDividers="middle" >
 
                 <mx.com.factico.cide.views.CustomTextView
-                    android:layout_width="match_parent"	
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/btn_dark_green_color"
                     android:paddingBottom="@dimen/activity_vertical_margin"
                     android:paddingLeft="@dimen/activity_horizontal_margin"
                     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -118,7 +112,6 @@
                     android:id="@+id/testimonios_pb_loading"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/btn_dark_green_color"
                     android:paddingBottom="@dimen/activity_vertical_margin"
                     android:paddingLeft="@dimen/activity_horizontal_margin"
                     android:paddingRight="@dimen/activity_horizontal_margin"
