--- a/res/layout/fragment_about.xml
+++ b/res/layout/fragment_about.xml
@@ -1,5 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical" >
+
+    <ImageView
+        android:id="@+id/fragment_about_iv_page"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/ic_splash"
+        android:scaleType="centerCrop"
+        android:contentDescription="@string/about_name" />
+    
+</LinearLayout>
+
+<!-- <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:cide="http://schemas.android.com/apk/res/mx.com.factico.cide"
     android:id="@+id/fragment_about_vg_container"
     android:layout_width="match_parent"
@@ -49,4 +64,4 @@
         android:textSize="20sp"
         cide:typefaceRoboto="regular" />
 
-</LinearLayout>
+</LinearLayout> -->
