--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:orientation="horizontal"
-            android:weightSum="5" >
+            android:weightSum="6" >
 
             <ImageView
                 android:id="@+id/main_logo"
@@ -38,10 +38,10 @@
                 android:id="@+id/main_desciption"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="3"
+                android:layout_weight="4"
                 android:gravity="center_vertical"
                 android:padding="20dp"
-                android:text="@string/lorem_ipsum_que_es_justicia"
+                android:text="@string/que_es_justicia"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textColor="@color/white"
                 android:textSize="15sp"
@@ -71,7 +71,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:background="@drawable/selector_btn_ligth"
+            android:background="@drawable/selector_btn_middle"
             android:drawableEnd="@drawable/ic_menu_arrow"
             android:drawableRight="@drawable/ic_menu_arrow"
             android:gravity="start|center_vertical"
