--- a/res/layout/activity_splash.xml
+++ b/res/layout/activity_splash.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/btn_dark_green_color" >
+    android:background="@color/background_splash" >
 
     <ImageView
         android:layout_width="match_parent"
