--- a/res/layout/activity_testimonios_add.xml
+++ b/res/layout/activity_testimonios_add.xml
@@ -1,18 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/drawable_bgr_gradient_ligth"
+    android:background="@drawable/drawable_bgr_gradient_dark"
     android:orientation="vertical" >
 
+    <include
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        layout="@layout/actionbar" />
+    
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/btn_ligth_green_color"
         android:fillViewport="true"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="?attr/actionBarSize" >
+        android:paddingTop="@dimen/activity_vertical_margin" >
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -32,6 +38,11 @@
                 android:textColorHint="@color/hololigth"
                 android:textSize="15sp" />
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="@color/btn_ligth_green_color" />
+
             <mx.com.factico.cide.views.CustomEditText
                 android:id="@+id/testimonios_add_et_email"
                 android:layout_width="match_parent"
@@ -46,105 +57,74 @@
                 android:textSize="15sp" />
 
             <Spinner
-                android:id="@+id/testimonios_add_sp_category"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:layout_marginTop="10dp"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
-                android:spinnerMode="dialog" />
-
-            <Spinner
-                android:id="@+id/testimonios_add_sp_city"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:layout_marginTop="10dp"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
-                android:spinnerMode="dialog" />
-
-            <Spinner
                 android:id="@+id/testimonios_add_sp_age"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
                 android:layout_marginTop="10dp"
-                android:paddingTop="10dp"
                 android:paddingBottom="10dp"
+                android:paddingTop="10dp"
                 android:spinnerMode="dialog" />
-
-            <LinearLayout
+            
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="@color/btn_ligth_green_color" />
+            
+            <Spinner
+                android:id="@+id/testimonios_add_sp_gender"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:layout_marginTop="10dp"
-                android:background="@color/white"
-                android:orientation="vertical"
-                android:padding="10dp" >
-
-                <TextView
-                    android:id="@+id/testimonios_add_tv_gender"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:padding="10dp"
-                    android:text="@string/testimonios_add_gender"
-                    android:textColor="@color/default_text_color"
-                    android:textSize="15sp" />
-
-                <RadioGroup
-                    android:id="@+id/testimonios_add_rg_gender"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical" >
-
-                    <RadioButton
-                        android:id="@+id/testimonios_add_rb_gender_male"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="@string/testimonios_add_gender_male"
-                        android:textColor="@color/default_text_color"
-                        android:textSize="15sp" />
-
-                    <RadioButton
-                        android:id="@+id/testimonios_add_rb_gender_female"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="@string/testimonios_add_gender_female"
-                        android:textColor="@color/default_text_color"
-                        android:textSize="15sp" />
-
-                    <RadioButton
-                        android:id="@+id/testimonios_add_rb_gender_none"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:checked="true"
-                        android:text="@string/testimonios_add_gender_none"
-                        android:textColor="@color/default_text_color"
-                        android:textSize="15sp" />
-                </RadioGroup>
-            </LinearLayout>
-
+                android:paddingBottom="10dp"
+                android:paddingTop="10dp"
+                android:spinnerMode="dialog" />
+            
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="@color/btn_ligth_green_color" />
+            
             <Spinner
                 android:id="@+id/testimonios_add_sp_grade"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
-                android:layout_marginTop="10dp"
-                android:paddingTop="10dp"
                 android:paddingBottom="10dp"
+                android:paddingTop="10dp"
+                android:spinnerMode="dialog" />
+            
+            <Spinner
+                android:id="@+id/testimonios_add_sp_category"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:paddingBottom="10dp"
+                android:paddingTop="10dp"
                 android:spinnerMode="dialog" />
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="@color/btn_ligth_green_color" />
+            
+            <Spinner
+                android:id="@+id/testimonios_add_sp_city"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:paddingBottom="10dp"
+                android:paddingTop="10dp"
+                android:spinnerMode="dialog" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="@color/btn_ligth_green_color" />
+            
             <mx.com.factico.cide.views.CustomEditText
                 android:id="@+id/testimonios_add_et_explication"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
-                android:layout_marginTop="10dp"
                 android:ems="10"
                 android:hint="@string/testimonios_add_explication"
                 android:inputType="textMultiLine"
@@ -165,9 +145,4 @@
         </LinearLayout>
     </ScrollView>
 
-    <include
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        layout="@layout/actionbar" />
-
-</RelativeLayout>
+</LinearLayout>
