--- a/res/layout/activity_gcmregister.xml
+++ b/res/layout/activity_gcmregister.xml
@@ -46,6 +46,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
+            android:text=""
+            android:hint=""
             android:inputType="numberSigned" />
     </LinearLayout>
 
